--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -14,8 +14,13 @@
   font-size: 0.875rem;
 }
 
-input[type="checkbox"] {
-  width: 2rem;
+.taskBox label {
+  display: block;
+  width: 100%;
+}
+
+.taskBox input[type="checkbox"] {
+  width: 1.2rem;
   height: 1.2rem;
 
   background: transparent;
@@ -30,24 +35,24 @@ input[type="checkbox"] {
   transition: all 0.2s;
 }
 
-input[type="checkbox"]:hover {
+.taskBox input[type="checkbox"]:hover {
   border: 1px solid var(--blue-dark);
   background: var(--blue-dark-opacity);
 }
 
-input[type="checkbox"]:checked {
+.taskBox input[type="checkbox"]:checked {
   background: var(--purple-dark);
   border: 1px solid var(--purple-dark);
 
   transition: background-color 0.2s;
 }
 
-input[type="checkbox"]:checked:hover {
+.taskBox input[type="checkbox"]:checked:hover {
   background: var(--purple);
   border: 1px solid var(--purple);
 }
 
-input[type="checkbox"]::before {
+.taskBox input[type="checkbox"]::before {
   content: "\2713";
   font-size: 1rem;
   line-height: 0;
@@ -58,17 +63,17 @@ input[type="checkbox"]::before {
   max-height: 0;
 }
 
-input[type="checkbox"]:checked::before {
+.taskBox input[type="checkbox"]:checked::before {
   visibility: visible;
   max-height: none;
 }
 
-input[type="checkbox"]:checked + label {
+.taskBox input[type="checkbox"]:checked + label {
   text-decoration: line-through;
   color: var(--gray-300);
 }
 
-button {
+.taskBox button {
   background: transparent;
   color: var(--gray-300);
   line-height: 0;
